# fiap-pos-tech-ia-para-devs-tech-challenge-fase-4

./: .env.example  .gitignore  README.md  debug_secrets.py  main.py  packages.txt  pyproject.toml  pytest.ini  requirements.txt
data/raw/: audio_metadata.json
docs/: relatorio_tecnico.md
src/alerts/: alert_dispatcher.py  alert_rules.py  fusion_engine.py  plotter.py  run_pipeline.py
src/audio/: anomaly_detector.py  audio_processor.py  plotter.py  synthetic_audio.py
src/dashboard/: pages_alerts.py  pages_audio.py  pages_video.py  pages_vitals.py
src/llm/: groq_client.py  prompts.py  summarizer.py  text_analyzer.py
src/video/: anomaly_detector.py  plotter.py  synthetic_video.py  video_processor.py
src/vitals/: detector.py  generator.py  plotter.py
tests/: test_alerts.py  test_audio.py  test_llm.py  test_video.py  test_vitals.py
