[project]
name = "monitoramento-hospitalar-multimodal"
version = "0.1.0"
description = "Sistema de monitoramento multimodal de pacientes (video, audio e sinais vitais) com deteccao de anomalias em tempo real, executado 100% localmente."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "streamlit>=1.58.0",
]
